Update image path

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          
            
             <div class="my-image">
-               <img src="https://i.imgur.com/yLtXyW1.jpg" alt="Mourine on her graduation day" />
+               <img src="./images/profile/moryn.jpg" alt="Mourine on her graduation day" />
             </div>
          </section>
 
